tree-sitter-vm/test/corpus/asm.txt
==================
Assembly labels and instructions
==================

:start
        ; init counter
        push0
:loop
        push1 0x01
        add
        pushl @loop
        jnz
        exit

---

(source_file
  (asm_program
    (asm_label)
    (asm_comment)
    (asm_simple_instruction
      opcode: (asm_opcode))
    (asm_label)
    (asm_push
      opcode: (asm_push_opcode)
      value: (byte_literal))
    (asm_simple_instruction
      opcode: (asm_opcode))
    (asm_push_label
      target: (asm_label_reference))
    (asm_simple_instruction
      opcode: (asm_opcode))
    (asm_simple_instruction
      opcode: (asm_opcode))))
